--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,13 @@
   <description>A docker client</description>
   <url>https://github.com/spotify/docker-client</url>
 
+  <distributionManagement>
+    <repository>
+      <id>atlassian-3rdparty</id>
+      <url>https://packages.atlassian.com/3rdparty</url>
+    </repository>
+  </distributionManagement>
+
   <licenses>
     <license>
       <name>The Apache Software License, Version 2.0</name>
