--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
   </parent>
 
   <artifactId>docker-client</artifactId>
-  <version>8.16.1-atlassian-1-SNAPSHOT</version>
+  <version>8.16.1-atlassian-1</version>
   <packaging>jar</packaging>
   <name>docker-client</name>
   <description>A docker client</description>
@@ -33,7 +33,7 @@
     <connection>scm:git:https://github.com/atlassian-forks/docker-client</connection>
     <developerConnection>scm:git:git@github.com:atlassian-forks/docker-client</developerConnection>
     <url>https://github.com/atlassian-forks/docker-client</url>
-    <tag>HEAD</tag>
+    <tag>v8.16.1-atlassian-1</tag>
   </scm>
 
   <developers>
