--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <parent>
-    <groupId>com.spotify</groupId>
-    <artifactId>foss-root</artifactId>
-    <version>5</version>
-  </parent>
-
+  <groupId>com.spotify.atlassian</groupId>
   <artifactId>docker-client</artifactId>
   <version>8.16.1-atlassian-2-SNAPSHOT</version>
   <packaging>jar</packaging>
