--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
     <connection>scm:git:https://github.com/atlassian-forks/docker-client</connection>
     <developerConnection>scm:git:git@github.com:atlassian-forks/docker-client</developerConnection>
     <url>https://github.com/atlassian-forks/docker-client</url>
-    <tag>docker-client-8.16.1-atlassian-2</tag>
+    <tag>HEAD</tag>
   </scm>
 
   <developers>
