--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
   <groupId>com.spotify</groupId>
   <artifactId>docker-client</artifactId>
-  <version>8.16.1-atlassian-8-SNAPSHOT</version>
+  <version>8.16.1-atlassian-8</version>
   <packaging>jar</packaging>
   <name>docker-client</name>
   <description>A docker client</description>
@@ -28,7 +28,7 @@
     <connection>scm:git:https://github.com/atlassian-forks/docker-client</connection>
     <developerConnection>scm:git:git@github.com:atlassian-forks/docker-client</developerConnection>
     <url>https://github.com/atlassian-forks/docker-client</url>
-    <tag>HEAD</tag>
+    <tag>docker-client-8.16.1-atlassian-8</tag>
   </scm>
 
   <developers>
