--- a/pom.xml
+++ b/pom.xml
@@ -124,6 +124,11 @@
       <version>${glassfish.jersey.version}</version>
     </dependency>
     <dependency>
+      <groupId>org.glassfish.jersey.inject</groupId>
+      <artifactId>jersey-hk2</artifactId>
+      <version>${glassfish.jersey.version}</version>
+    </dependency>
+    <dependency>
       <groupId>jakarta.inject</groupId>
       <artifactId>jakarta.inject-api</artifactId>
       <version>2.0.1</version>
